--- a/src/Homepage.css
+++ b/src/Homepage.css
@@ -1,14 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:ital,wght@0,400;1,400&display=swap');
+
 .nav-link {
   font-size: 1.3rem;
 }
 
 .bg-burgundy {
-  background-color: #800020; 
+  background-color: #800020;
 }
 
-
 .play-button:hover {
-  background-color: #198754;
+  background-color: #800020;
   color: #fff;
 }
 
@@ -18,11 +19,13 @@ iframe {
 }
 
 .biopic {
-  border-radius: 50%;  
+  border-radius: 50%;
+  width: 100%;       
+  height: auto;
 }
 
 .biotext span {
-  font-size: 2.5rem;  
+  font-size: 2.5rem;
 }
 
 .biotext a {
@@ -41,3 +44,75 @@ iframe {
   font-size: 1.2rem;
   color: #b40b0b;
 }
+
+.project-details-container {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start; 
+}
+
+.project-details-container .col-lg-4,
+.project-details-container .col-lg-8 {
+  padding: 0;
+  margin: 0;
+}
+
+.list-group-item {
+  padding-left: 0;
+}
+
+
+.intro-text p {
+  font-family: 'Roboto Slab', serif;
+  font-style: italic;
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem; 
+}
+
+
+
+.how-title {
+  display: flex;
+  flex-direction: column;
+  text-align: left; 
+}
+
+.how-title .how {
+  font-weight: bold;
+  font-size: 5rem;
+  line-height: 1; 
+  margin-bottom: 1.5rem;
+}
+
+.how-title .to-play {
+  font-family: 'Roboto Slab', serif;
+  font-style: italic;
+  font-size: 2rem; 
+  line-height: 1; 
+  
+}
+
+.col-lg-8 h3{
+  font-weight: bold;
+}
+
+.project-details {
+  font-family: 'Roboto Slab', serif;
+  font-style: italic;
+}
+
+.biopic-container h3 {
+  margin-bottom: 1rem; 
+}
+
+.biopic-container p {
+  margin-top: 1rem; 
+  font-family: 'Roboto Slab', serif;
+  font-style: italic;
+}
+
+header h1 {
+  margin-top: 2rem; 
+  margin-bottom: 2rem; 
+}
+
